--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -2,7 +2,7 @@
 @import "base/reset.scss", "base/typography.scss", "base/color.scss";
 @import "components/navigation.scss", "components/chips.scss";
 @import "layout/grid.scss";
-@import "pages/overview.scss", "pages/coffee.scss";
+@import "pages/overview.scss", "pages/coffee.scss","pages/gadget.scss";
 
 
 
