--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,8 +1,8 @@
 // import all the scss files here
 @import "base/reset.scss", "base/typography.scss", "base/color.scss";
-@import "components/navigation.scss", "components/chips.scss";
+@import "components/navigation.scss", "components/chips.scss", "components/accordion.scss";
 @import "layout/grid.scss";
-@import "pages/overview.scss", "pages/coffee.scss","pages/gadget.scss";
+@import "pages/overview.scss", "pages/coffee.scss","pages/gadget.scss", "pages/brew.scss";
 
 
 
