--- a/public/scss/layout/form.scss
+++ b/public/scss/layout/form.scss
@@ -5,3 +5,9 @@
     margin: 2%;
     border: 1px solid pink;
 }
+
+.form-item {
+    display: inline-block;
+    padding: 20px;
+    border: 1px solid pink
+}
