--- a/public/scss/components/buttons.scss
+++ b/public/scss/components/buttons.scss
@@ -5,6 +5,7 @@ button {
     font-size: 1.5rem;
     position: relative;
     cursor: pointer;
+    height: 3rem;
 }
 
 .fill::before {
@@ -19,8 +20,15 @@ button {
     -webkit-transition: left 0.1s ease-in;
 }
 .fill:hover {
-    color: #1D1D1B;
+    color: $black;
 }
 .fill:hover::before {
     left: 0;
+}
+
+
+.black-btn {
+    border: 1px solid $black;
+    background-color: $black;
+    color: white !important;
 }
