--- a/public/scss/components/buttons.scss
+++ b/public/scss/components/buttons.scss
@@ -3,8 +3,8 @@ button {
     font-size: 1.5rem;
     position: relative;
     cursor: pointer;
-    height: 3rem;
-    max-width: 10rem;
+    // height: 3rem;
+    // max-width: 10rem;
 }
 
 input[type="submit"], input[type="button"]{
