--- a/public/scss/layout/form.scss
+++ b/public/scss/layout/form.scss
@@ -2,12 +2,14 @@
     * {
         color: $black;
     }
+
     //basic style setup for the form container
     height: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
     .form-heading {
         display: flex;
         justify-content: space-between;
@@ -18,6 +20,7 @@
             font-size: 2rem;
         }
     }
+
     form {
         flex: 1;
         justify-self: flex-end;
@@ -31,13 +34,16 @@
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid olive;
+
     .form-input-container {
         .form-row {
             display: flex;
             align-items: center;
+
             &:not(:last-child) {
                 margin-bottom: 2rem;
             }
+
             // border: 1px solid aquamarine;
             .form-item {
                 color: $black;
@@ -45,10 +51,17 @@
                 padding: 4px;
                 gap: 1rem;
                 // border: 1px solid pink;
-                height: 3rem;
+                // height: 3rem;
 
-                label, span {
+                &>label {
                     font-size: 1.5rem;
+                }
+
+                &>span {
+                    //align the text to the vertical center
+                    margin: auto 0;
+                    font-size: 1.5rem;
+                    display: inline-block;
                 }
             }
         }
@@ -71,7 +84,7 @@
         }
 
         .progress-button {
-            padding: 3rem;
+            padding: 3rem 0;
             //take up all the remaining area of the progress-container
             flex: 1;
             //move the button at the center of the progress-container
@@ -79,10 +92,12 @@
 
             display: flex;
             justify-content: flex-end;
+
             //evenly distribute space for each child
             * {
                 flex: 1;
             }
+
             input:not(:first-child) {
                 margin-left: 50vw;
             }
@@ -107,12 +122,68 @@
 .text-field {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid $black;
-    padding: 4px 0;
+    border-bottom: 1px solid $gray;
+    margin: 4px 0;
 
     //make the placeholder text all uppercase without affecting user input
     text-transform: none;
+
     &::placeholder {
         text-transform: uppercase;
+        letter-spacing: 0.01rem;
+        color: $gray;
+        font-size: 1rem;
+    }
+
+    //change the focus state
+    &:focus {
+        border-bottom: 1px solid $black;
+        transition: 200ms all ease-in-out;
+    }
+}
+
+//styling customised radio button, credit to https://moderncss.dev/pure-css-custom-styled-radio-buttons/
+.radio-wrapper {
+    margin: 0 1rem;
+    .radio-container {
+        display: grid;
+        grid-template-columns: 1em auto;
+        gap: 1rem;
+        align-items: center;
+        font-size: 1rem;
+
+        input[type="radio"] {
+            // disable default radio button
+            appearance: none;
+            background-color: #fff;
+            margin: 0;
+
+
+            // custom unchcekd radio style
+            color: $black;
+            width: 1rem;
+            height: 1rem;
+            border: 1px solid $black;
+            border-radius: 50%;
+
+
+            // align before state to the horizontal and vertical center
+            display: grid;
+            place-content: center;
+
+            &::before {
+                content: "";
+                width: 0.5rem;
+                height: 0.5rem;
+                border-radius: 50%;
+                transform: scale(0);
+                transition: 120ms transform ease-in-out;
+                box-shadow: inset 1em 1em $accent;
+            }
+
+            &:checked::before {
+                transform: scale(1);
+            }
+        }
     }
 }
