--- a/public/scss/pages/hero-section.scss
+++ b/public/scss/pages/hero-section.scss
@@ -7,6 +7,7 @@
         margin: auto 0;
         line-height: 1;
         padding: 2%;
+        padding-left: 10%;
         z-index: 2;
     }
     figure {
