styling the coffee information description

--- a/public/scss/base/typography.scss
+++ b/public/scss/base/typography.scss
@@ -37,3 +37,14 @@ p {
         font-family: suisse_intlregular;
     }
 }
+
+
+// ------------------coffee info description section------------------
+#coffee-info {
+    .info-item-label {
+        // font-size:
+    }
+    .info-item-value {
+        font-size: 1.5rem;
+    }
+}
