--- a/public/scss/pages/coffee.scss
+++ b/public/scss/pages/coffee.scss
@@ -25,17 +25,22 @@
         list-style: none;
         padding: 0;
         margin: 0;
+
         .coffee-item {
             padding: 2%;
             height: fit-content;
             border-bottom: 1px solid white;
-            
+            text-decoration: none;
 
             display: flex;
             flex-direction: row;
             justify-content: space-between;
 
             .coffee-item-wrap {
+                //make sure the text display is consistent even user type different cases
+                * {
+                    text-transform: capitalize;
+                }
                 flex: 1;
                 display: flex;
                 flex-direction: column;
@@ -51,6 +56,41 @@
 
             .coffee-item-wrap:last-child {
                 text-align: right;
+            }
+        }
+    }
+}
+
+//styling the detailed page of coffee description
+#coffee-info {
+    padding: 2%;
+    .info-container{
+        height: 100%; // make sure the information container take up the whole height
+
+        display: flex;
+        flex-direction: row;
+        .info-col {
+            flex: 1; //even spliting the container
+            display: flex;
+            flex-direction: column;
+
+            &:first-child {
+                border-right: 1px solid white;
+            }
+            .info-row {
+                padding: 2%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                &:not(:last-child){
+                    border-bottom: 1px solid white;
+                }
+                //the fourth child of the column will take up the remaining space
+                &:nth-child(4) {
+                    background-color: blue;
+                    flex: 1;
+                }
             }
         }
     }
