fix up the form style

--- a/public/scss/base/color.scss
+++ b/public/scss/base/color.scss
@@ -2,7 +2,7 @@
 //setting up color palette for the project
 $black: #1D1D1B;
 $accent: #FF3F61;
-$gray: #8E8E8D;
+$gray: #797979;
 
 body {
     background-color: $black;
