--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,7 @@
 // import all the scss files here
 @import "base/reset.scss", "base/typography.scss", "base/color.scss";
-@import "components/navigation.scss", "components/buttons.scss", "components/chips.scss", "components/accordion.scss", "components/modal.scss";
+@import "components/navigation.scss", "components/buttons.scss", "components/chips.scss", 
+"components/accordion.scss", "components/modal.scss", "components/tags.scss";
 @import "layout/grid.scss", "layout/form.scss";
 @import "pages/overview.scss", "pages/coffee.scss","pages/gadget.scss", "pages/brew.scss", "pages/hero-section.scss";
 
