--- a/public/scss/components/buttons.scss
+++ b/public/scss/components/buttons.scss
@@ -14,6 +14,10 @@ input[type="submit"], input[type="button"]{
     cursor: pointer;
     height: 3rem;
     max-width: 10rem;
+
+    &:disabled {
+        background-color: pink;
+    }
 }
 
 //set up the color for different type of buttons 
