--- a/public/scss/components/buttons.scss
+++ b/public/scss/components/buttons.scss
@@ -5,9 +5,23 @@ button {
     cursor: pointer;
     // height: 3rem;
     // max-width: 10rem;
+    //add a click effect for all the buttons
+    &:active {
+        transform: scale(0.96);
+        transition: all .3s ease;
+    }
 }
 
-input[type="submit"], input[type="button"]{
+// fill in animation for buttons
+.fill-in {
+    &:hover {
+        transition: all 1s ease;
+        box-shadow: inset 0 0 0 2em $accent;
+    }
+}
+
+input[type="submit"],
+input[type="button"] {
     padding: 0.2rem 1rem;
     font-size: 1.5rem;
     position: relative;
@@ -16,26 +30,36 @@ input[type="submit"], input[type="button"]{
     max-width: 10rem;
 
     &:disabled {
-        background-color: pink;
+        border-color: $gray;
+        color: $gray;
+        cursor: not-allowed;
+        //remove the box-shadow animation when a button is disabled
+        &:hover{
+            box-shadow: none;
+        }
     }
+
 }
 
 //set up the color for different type of buttons 
 .black-fill {
-    color: white !important;
+    color: white;
     background: $black;
 }
 
 .white-fill {
-    color: $black !important;
+    color: $black;
     background: white;
 }
+
 .black-border {
     border: 1px solid $black;
 }
+
 .white-border {
     border: 1px solid white;
 }
+
 .fill::before {
     content: "";
     position: absolute;
@@ -47,9 +71,11 @@ input[type="submit"], input[type="button"]{
     z-index: -1;
     -webkit-transition: left 0.1s ease-in;
 }
+
 .fill:hover {
     color: $black;
 }
+
 .fill:hover::before {
     left: 0;
 }
