adding delete to gadget and bug fixing

--- a/public/scss/base/color.scss
+++ b/public/scss/base/color.scss
@@ -11,3 +11,13 @@ body {
 * {
     color: white;
 }
+
+//this class will set everything inside the class with black color
+//it is used when the container background color is too light to use white text
+//please see colorthief.js for a more clear explanation
+.black-contrast {
+    * {
+        color: $black !important;
+        border-color: $black !important;
+    }
+}
