--- a/public/scss/layout/form.scss
+++ b/public/scss/layout/form.scss
@@ -24,6 +24,7 @@ form {
             align-items: center;
             justify-content: flex-start;
             gap: 1rem;
+
             .form-item {
                 // border: 1px solid pink;
                 height: 5rem;
@@ -43,10 +44,11 @@ form {
                 margin: auto 0;
                 font-size: 1.5rem;
                 display: inline-block;
+
                 &:not(:first-child) {
                     margin-left: 1rem;
                 }
-                
+
             }
         }
     }
@@ -60,6 +62,7 @@ form {
             display: flex;
             flex-direction: column;
             min-width: 300px;
+
             h2 {
                 color: $accent;
                 font-size: 1rem;
@@ -67,7 +70,7 @@ form {
             }
 
             p {
-                
+
                 font-size: 6rem;
                 font-weight: 300;
             }
@@ -87,7 +90,8 @@ form {
             * {
                 flex: 1;
             }
-            & > *:last-child {
+
+            &>*:last-child {
                 justify-content: flex-end;
             }
         }
@@ -161,6 +165,7 @@ input[type=number] {
     border: 1px solid $gray;
     padding: 4px 8px;
     background-color: transparent;
+
     &:focus {
         border: 1px solid $accent;
         transition: 200ms all ease-in-out;
@@ -171,19 +176,28 @@ input[type=date] {
     margin: 4px 0;
     background-color: transparent;
     border: none;
+    min-width: 8rem;
     border-bottom: 1px solid gray;
     text-transform: uppercase;
     color: white;
+
     &:invalid::-webkit-datetime-edit {
         color: $gray;
     }
+
     &:focus {
         border-bottom: 1px solid $accent;
         transition: 200ms all ease-in-out;
     }
+
     //credit to https://stackoverflow.com/questions/14946091/are-there-any-style-options-for-the-html5-date-picker
-    &::-webkit-calendar-picker-indicator {filter: invert(100%);} // turn the indicator button to white
+    &::-webkit-calendar-picker-indicator {
+        filter: invert(100%);
+    }
+
+    // turn the indicator button to white
 }
+
 //styling customised radio button, credit to https://moderncss.dev/pure-css-custom-styled-radio-buttons/
 .radio-wrapper {
     margin: 0 1rem;
@@ -292,7 +306,7 @@ input[type=date] {
         right: 0;
         z-index: 99;
 
-        & div{
+        & div {
             &:not(:last-child) {
                 border-bottom: 1px solid $gray;
             }
@@ -343,8 +357,20 @@ input[type=date] {
     }
 }
 
-
+//styling the tag text input area
 .tag-container {
     flex-direction: column;
     align-items: flex-start !important;
+}
+
+//remove the default autofill background
+/* Change Autocomplete styles in Chrome*/
+//Code reference from: https://css-tricks.com/snippets/css/change-autocomplete-styles-webkit-browsers/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    -webkit-text-fill-color: white;
+    caret-color: white; //change the cursor color to white as well
+    -webkit-box-shadow: 0 0 0px 1000px $black inset; //change the background color
+    transition: background-color 5000s ease-in-out 0s;
 }
